spacing correction

--- a/src/app/public/login/login.page.scss
+++ b/src/app/public/login/login.page.scss
@@ -45,6 +45,8 @@ ion-grid {
     }
   }
 }
-
+sio-page {
+  padding-top: var(--spacing-smaller);
+}
 //item ios ion-focusable hydrated item-label item-label-floating item-interactive item-input item-has-value ion-touched ion-dirty ion-valid
 //item     ion-focusable hydrated item-label item-label-floating item-interactive item-input item-has-value ion-touched ion-dirty ion-valid md
